// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render Expense summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $235,123,409.87
  </h1>
</div>
`;

exports[`should render Expense summary with no expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
